fixed alignment of 'training' page

--- a/app/styles/training.scss
+++ b/app/styles/training.scss
@@ -14,9 +14,9 @@
     &__item {
       display: flex;
       justify-content: center;
-      width: calc(100% / 2 - 6rem);
+      width: calc(100% / 2 - 2rem);
       flex-grow: 1;
-      margin: $m-gutter;
+      margin: $m-gutter 0;
       border-radius: $m-gutter;
       background: linear-gradient(rgba($c-dark-grey,.7),rgba($c-tan,.5));
     }
